# snake_game

./: CMakeLists.txt  Makefile  README.md  build_and_run.sh
src/: Field.cpp  Field.h  Food.cpp  Food.h  Game.cpp  Game.h  Snake.cpp  Snake.h  app  main.cpp
